<resources>
    <string name="app_name">ChoraLine</string>
    <string name="title_activity_home">HomeActivity</string>

    <!-- General Alerts Messages  -->
    <string name="alert_no_internet_connection">Please check your internet connection.</string>
    <string name="alert_server_not_responding">Something went wrong please try again later.</string>
    <string name="alert_press_back_again_to_exit">Please click BACK again to exit.</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_join">Join</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_faq">FAQ</string>
    <string name="nav_contact_us">Contact Us</string>
    <string name="nav_terms_and_conditions">Terms &amp; Conditions</string>
    <string name="nav_choral_composers">Choral Composers</string>
    <string name="nav_choraline_shop">ChoraLine Shop</string>
    <string name="nave_purchased_music">Purchased Music</string>
    <string name="nav_order_history">Order History</string>
    <string name="nav_profile">My Account</string>
    <string name="nav_logout">Logout</string>
    <string name="visit_web">Visit choraline.com</string>

    <string name="text_sing_your_notes_perfectly">Sing Your Notes Perfectly</string>
    <string name="text_free_trail">Free Trial</string>
    <string name="text_login">Login</string>
    <string name="text_join">Join</string>
    <string name="text_login_email">Email</string>
    <string name="text_login_password">Password</string>
    <string name="text_forgot_password">Forgot Password</string>
    <string name="text_submit">Submit</string>
    <string name="text_back">Back</string>
    <string name="text_back_to_login">Back to Login</string>
    <string name="text_signup_first_name">First Name*</string>
    <string name="text_signup_last_name">Last Name*</string>
    <string name="text_signup_email">Email*</string>
    <string name="text_signup_confirm_email">Confirm Email*</string>
    <string name="text_signup_password">Password*</string>
    <string name="text_signup_confirm_password">Confirm Password*</string>
    <string name="text_signup_name_of_your_choir">Name of your choir</string>
    <string name="title_activity_free_trail">FreeTrailActivity</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="title_activity_faq">FAQActivity</string>

    <string name="text_name">Name*</string>
    <string name="text_contact_number">Contact Number</string>
    <string name="text_leave_your_message">Leave your message*</string>
    <string name="text_max_200_characters">max 200 characters</string>
    <string name="text_max_400_characters">max 400 characters</string>

    <string name="text_profile_first_name">First Name:</string>
    <string name="text_profile_last_name">Last Name</string>
    <string name="text_profile_email">Email:</string>
    <string name="text_profile_address1">Address1:</string>
    <string name="text_profile_address2">Address2:</string>
    <string name="text_profile_town">Town:</string>
    <string name="text_profile_postcode">Postcode:</string>
    <string name="text_profile_country">Country:</string>
    <string name="text_profile_telephone">Telephone:</string>
    <string name="text_profile_choir">Choir:</string>
    <string name="text_profile_edit_profile">Edit Profile</string>
    <string name="text_enter_new_password">Enter New Password</string>
    <string name="text_confirm_new_password">Confirm New Password</string>
    <string name="text_address1">Address1</string>
    <string name="text_address2">Address2</string>
    <string name="text_town">Town</string>
    <string name="text_postcode">Postcode</string>
    <string name="text_country">Country</string>
    <string name="text_telephone">Telephone</string>
    <string name="text_optin">Optin</string>
    <string name="title_activity_free">FreeActivity</string>
    <string name="title_activity_order_history">OrderHistoryActivity</string>
    <string name="title_activity_purchased_music">PurchasedMusicActivity</string>
    <string name="title_activity_purchased_music_song_list">PurchasedMusicSongListActivity</string>
    <string name="title_activity_thank_you">ThankYouActivity</string>


    <string name="app_version_number">1.0</string>
    <string name="menu_settings">Settings</string>

    <string name="cd_repeat">Repeat one or all</string>
    <string name="cd_previous">Skip backwards</string>
    <string name="cd_play">Play and pause</string>
    <string name="cd_next">Skip forwards</string>

    <string name="text_proceed">Proceed</string>
    <string name="text_choral_works">Choral Works</string>
    <string name="text_select_voice_type">Select Voice Part</string>
    <string name="text_select_currency">Select Currency</string>
    <string name="text_add_to_basket">Add To Basket</string>

    <string name="text_basket">Basket</string>
    <string name="text_discount_code">Discount Code</string>
    <string name="text_enter">Enter</string>
    <string name="text_continue_shopping">Continue Shopping</string>
    <string name="text_purchase">Purchase</string>


    <string name="text_thank_you_for_your_order">Thank you for your order</string>
    <string name="text_go_to_purchase">Go to Purchase</string>
    <string name="text_order_history">Order History</string>
    <string name="text_you_will_also_receive_an_email">You will also receive an email with a \'link\' to your order.</string>
    <string name="text_logout">Logout</string>
    <string name="download">Downloads</string>
    <string name="old_password">Current Password</string>
    <string name="no_data_found">No data found.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="speed">Speed</string>
    <string name="_0_5x">0.9x</string>
    <string name="_0_75x">0.75x</string>
    <string name="normal">Normal</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="free_song_not_available">The Free Trial does not include the option to change playback speed. This will be available for all purchased music once you have created an account.</string>
    <string name="no_purchase_list_found">No purchase list found.</string>

    <string name="with_internet_message">This page can only be viewed with internet connection.</string>
    <string name="voice_balance">Voice Balance</string>


</resources>
