<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_choraline_shops"
            android:title="@string/nav_choraline_shop"
            android:icon="@mipmap/profile"/>


        <item
            android:id="@+id/action_purchased_music"
            android:title="@string/nave_purchased_music"
            android:icon="@mipmap/purchased_music"/>
        <item
            android:id="@+id/action_downloaded"
            android:title="@string/download"
            android:icon="@mipmap/download_nav"/>

        <item
            android:id="@+id/action_order_history"
            android:title="@string/nav_order_history"
            android:icon="@mipmap/order_history"/>





        <item
            android:id="@+id/action_profile"
            android:title="@string/nav_profile"
            android:icon="@mipmap/profile"/>

        <item
            android:id="@+id/action_about_us"
            android:title="@string/nav_about_us"
            android:icon="@mipmap/about_us"/>

        <item
            android:id="@+id/action_faq"
            android:title="@string/nav_faq"
            android:icon="@mipmap/faq"/>

        <item
            android:id="@+id/action_contact_us"
            android:title="@string/nav_contact_us"
            android:icon="@mipmap/contact_us"/>

        <item
            android:id="@+id/action_terms_and_conditions"
            android:title="@string/nav_terms_and_conditions"
            android:icon="@mipmap/terms"/>

        <item
            android:id="@+id/action_privacy_policy"
            android:title="@string/privacy_policy"
            android:icon="@mipmap/privacy_policy"/>

        <item
            android:id="@+id/visit_web"
            android:title="@string/visit_web"
            android:icon="@mipmap/web"/>
        <item
            android:id="@+id/action_logout"
            android:title="@string/nav_logout"
            android:icon="@mipmap/logout"/>





    </group>

</menu>