<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_choral_works_item"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/speed"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@color/black" />


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/point_seven_five_pitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/pitch_custom_radio"
            android:padding="@dimen/pitch_dialogue_padding"
            android:text="@string/_0_75x"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/point_five_pitch_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/pitch_custom_radio"
            android:padding="@dimen/pitch_dialogue_padding"
            android:text="@string/_0_5x"
            android:textColor="@color/black"

            />

        <RadioButton
            android:id="@+id/one_pitch_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/pitch_custom_radio"
            android:padding="@dimen/pitch_dialogue_padding"
            android:text="@string/normal"
            android:textColor="@color/black" />

    </RadioGroup>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end">

        <TextView
            android:id="@+id/cancel_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/apply_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/apply"
            android:textColor="@color/colorAccent" />


    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/voice_balance"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@color/black" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="L"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:padding="5dp"
            android:text="R"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </RelativeLayout>

    <SeekBar
        android:id="@+id/seekbar_adjust_volume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="10dp"
        android:max="100"
        android:thumb="@drawable/thumb" />

    <TextView
        android:id="@+id/switch_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="Default"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent" />


</LinearLayout>