<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.choraline.ForgetPasswordActivity">

    <RelativeLayout
        android:id="@+id/layoutParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:background="@mipmap/splash_bg">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/text_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="@android:color/transparent"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/margin_left_or_right"
            android:layout_marginRight="@dimen/margin_left_or_right"
            android:layout_marginStart="@dimen/margin_left_or_right"
            android:layout_marginEnd="@dimen/margin_left_or_right">




            <EditText
                android:id="@+id/forgotpassword_edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:imeOptions="actionDone"
                android:lines="1"
                android:padding="15dp"
                android:inputType="textWebEmailAddress"
                android:hint="@string/text_login_email"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white"
                android:background="@drawable/rounded_input_layout"/>




            <Button
                android:id="@+id/forgotpassword_btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/text_submit"
                android:textColor="@android:color/white"
                android:background="@drawable/rounded_login_button"/>

            <TextView
                android:id="@+id/forgotpassword_txtBackToLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/text_back_to_login"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />


        </LinearLayout>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
